# sectorem

./: .editorconfig  .gitignore  README.md  acceptance.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: Makefile  auth.rst  conf.py  design.rst  index.rst  quickstart.rst
docs/api/: client.rst  errors.rst  index.rst  market.rst  stream.rst  trader.rst
sectorem/: __init__.py  client.py  errors.py  rest.py
sectorem/auth/: __init__.py  manager.py  server.py  token.py
sectorem/etc/: localhost.crt  localhost.key
sectorem/market/: __init__.py  client.py
sectorem/stream/: __init__.py  client.py  fields.py
sectorem/trader/: __init__.py  client.py  constants.py  parse.py  types.py
tests/: conftest.py  test_authenticator.py  test_client.py  test_market.py  test_parse.py  test_rest.py  test_server.py  test_token.py  test_trader.py
