[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sectorem"
version = "0.1.0"
description = "Async Python client for the Schwab Trader API."
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Greg Bowser", email = "topnotcher@gmail.com"},
]

dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
